--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --inspect src/index.js",
-    "sass": "node-sass -w src/resource/scss src/assets/css --source-map false"
+    "sass": "node-sass -w src/resource/scss --output=src/assets/css --source-map false"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/NTLuan1997/Node_JS#readme",
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "express": "^4.17.3",
-    "express-handlebars": "^6.0.2"
+    "express-handlebars": "^6.0.2",
+    "jquery": "^3.6.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
