--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "mongodb": "^3.4.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
