--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
     "jquery": "^3.6.0",
-    "mongodb": "^3.4.0"
+    "mongodb": "^3.6.2",
+    "mongoose": "^6.2.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
