--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
+    "express-session": "^1.17.2",
     "jquery": "^3.6.0",
     "mongodb": "^3.6.2",
     "mongoose": "^6.2.4"
