--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express-session": "^1.17.2",
     "jquery": "^3.6.0",
     "mongodb": "^3.6.2",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
