--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.2",
     "mongoose": "^6.2.4",
     "multer": "^1.4.4"
