--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "homepage": "https://github.com/NTLuan1997/CODERUDEMY-BE#readme",
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.2",
     "mongoose": "^6.2.4",
