--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/NTLuan1997/CODERUDEMY-BE#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bootstrap": "^4.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
