--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.2",
     "mongoose": "^6.2.4",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "passport": "^0.5.3",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
