--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-handlebars": "^6.0.2",
     "express-session": "^1.17.2",
     "jquery": "^3.6.0",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongodb": "^3.6.2",
